--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,7 +5,7 @@
       <view class="tabs-item-li {{curIndex=='0'? 'active' : ''}}" data-id="0" bindtap="tabMenu">网约车</view>
       <view class="tabs-item-li {{curIndex=='1'? 'active' : ''}}" data-id="1" bindtap="tabMenu">接送站</view>
       <view class='tabs-item-li'>
-        <navigator url="/pages/order/order" hover-class="none">订单{{curIndex}}</navigator>
+        <navigator url="/pages/order/order" hover-class="none">订单</navigator>
       </view>
     </view>
   </view>
