--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -63,7 +63,7 @@
   </block>
   <!-- 约车,接送 -->
   <block wx:else>
-    <map class="xMap" id='xMap' latitude="{{globalMapData.startLatitude}}" longitude="{{globalMapData.startLongitude}}" scale="{{scale}}" bindregionchange="bindregionchange" polyline="{{polyline}}" style="height:{{mapHeight}}px" show-location>
+    <map class="xMap" id='xMap' latitude="{{globalMapData.startLatitude}}" longitude="{{globalMapData.startLongitude}}" scale="{{scale}}" bindregionchange="regionchange"  bindtap="moveToLocation" polyline="{{polyline}}" style="height:{{mapHeight}}px" show-location>
       <cover-view class="markerStart">
         <cover-image src='../../pages/image/markerStart.png' />
       </cover-view>
