--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -29,6 +29,9 @@
 }
 
 .share-car .share-box .time-item .bold {
+  width: 100%;
+  height: 50rpx;
+  float: left;
   font-size: 34rpx;
   line-height: 50rpx;
   font-weight: bold;
@@ -37,6 +40,7 @@
 
 .share-car .share-box .time-item .xw {
   width: 100%;
+  height: 28rpx;
   float: left;
   font-size: 28rpx;
   line-height: 28rpx;
