--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -28,11 +28,17 @@
   text-align: cetner;
 }
 
+.share-car .share-box .time-item .time-picker{
+  font-size:30rpx;
+  line-height: 80rpx;
+  text-align: center;
+}
+
 .share-car .share-box .time-item .bold {
   width: 100%;
   height: 50rpx;
   float: left;
-  font-size: 34rpx;
+  font-size: 32rpx;
   line-height: 50rpx;
   font-weight: bold;
   text-align: center;
@@ -48,6 +54,8 @@
 }
 
 .share-car .share-box .time-item .dayNum {
+  width:46rpx;
+  height:40rpx;
   float: left;
   font-size: 28rpx;
   margin: 0 116rpx;
@@ -248,7 +256,7 @@
   float: left;
 }
 
-.xContent .user-info .names,.xContent .user-info .phone {
+.xContent .user-info .names, .xContent .user-info .phone {
   float: left;
   margin-right: 15rpx;
 }
@@ -286,16 +294,16 @@
 }
 
 .xContent .chooseTime {
-  display: table;
-  margin: 5px auto 0;
-  font-size: 12px;
-  line-height: 30px;
-  text-align: center;
-}
-
-.xContent .chooseTime picker {
+  width: 100%;
+  height: 60rpx;
   float: left;
-  margin: 0 20rpx;
+  display: table;
+  margin-top: 10rpx;
+  font-size: 28rpx;
+  line-height: 60rpx;
+  text-align: center;
+  
+  
 }
 
 .xContent .time-picker {
@@ -304,7 +312,7 @@
 }
 
 .xContent .inputText {
-  width:100%;
+  width: 100%;
   float: left;
   height: 80rpx;
   padding: 0 40rpx;
