--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -26,7 +26,11 @@
           </view>
           <view class='dayNum'>
             <view class='constNum'>
-              <block wx:if="{{TimeDifference !=''}}">{{TimeDifference}}</block>
+              <block wx:if="{{constD !='' || constH !='' || constM !=''}}">
+                <block wx:if="{{constD}} !='' && {{constD}} !='0'">{{constD}}天</block> 
+                <block wx:if="{{constH}} !='' && {{constH}} !='0'">{{constH}}小时</block> 
+                <block wx:if="{{constM}} !='' && {{constM}} !='0' ">{{constM}}分钟</block>
+              </block>
             </view>
           </view>
           <view class='endTime timeSty'>
