--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -54,28 +54,30 @@
 }
 
 .share-car .share-box .time-item .dayNum {
-  width:46rpx;
+  width:238rpx;
   height:40rpx;
   float: left;
   font-size: 28rpx;
-  margin: 0 116rpx;
+  margin: 0 20rpx;
   position: relative;
 }
 
 .share-car .share-box .time-item .dayNum::before {
   content: '';
-  width: 100rpx;
+  width: 100%;
   height: 2rpx;
   background-color: #e1e1e1;
   display: block;
   position: absolute;
   left: 50%;
   top: 50rpx;
-  margin-left: -50rpx;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
 }
 
 .share-car .share-box .time-item .constNum {
   position: relative;
+  text-align: center;
 }
 
 .share-car .share-box .time-item .constNum::before,
@@ -91,11 +93,11 @@
 }
 
 .share-car .share-box .time-item .constNum::before {
-  left: -40rpx;
+  left: -6px;
 }
 
 .share-car .share-box .time-item .constNum::after {
-  right: -40rpx;
+  right: -6px;
   background-color: #e9e6e9;
 }
 
