--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -27,9 +27,9 @@
           <view class='dayNum'>
             <view class='constNum'>
               <block wx:if="{{constD !='0' || constH !='0' || constM !='0'}}">
-                <block wx:if="{{constD !='0'}}">{{constD}}天 </block> 
+                <block wx:if="{{constD !='0' || constD < 1 }}">{{constD}}天 </block> 
                 <block wx:if="{{constH !='0'}}">{{constH}}小时 </block> 
-                <block wx:if="{{constM !='0'}}">{{constM}}分钟</block>
+                <block wx:if="{{constM !='0' || constM < 30 }}">{{constM}}分钟</block>
               </block>
             </view>
           </view>
