--- a/pages/user/userInfo.wxss
+++ b/pages/user/userInfo.wxss
@@ -4,4 +4,4 @@
 .xxInfo .inpTxt{height: 80rpx; padding: 0 40rpx; font-size:30rpx; line-height: 80rpx; color:#868686; margin-bottom: 20rpx; border-bottom: 1px solid #f5f5f5;}
 .xxInfo .inpTxt view{ width: 160rpx; float: left; margin-right: 20rpx;}
 .xxInfo .inpTxt input{ height: 80rpx; line-height: 80rpx;}
-.xxInfo .goBtn{width: 100%; height: 50px; position: absolute; left: 0; bottom: 0; background-color: #48acf7; font-size:16px; line-height: 50px; text-align: center; color:#fff; border-radius: 0; padding: 0;}
+.xxInfo .goBtn{width: 100%; height: 100rpx; position: absolute; left: 0; bottom: 0; background-color: #4b4c60; font-size:32rpx; line-height: 100rpx; text-align: center; color:#fff; border-radius: 0; padding: 0;}
