--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -157,7 +157,7 @@
 
 .xMap {
   width: 100%;
-  height: 70vh;
+  height: auto;
   position: relative;
   top: 41px;
 }
@@ -247,21 +247,20 @@
   bottom: 0;
   left: 0;
   z-index: 999;
-  padding-bottom: 10rpx;
 }
 
 .xContent .user-info {
-  padding: 0 40rpx;
+  width: 100%;
+  float: left;
   font-size: 22rpx;
   line-height: 54rpx;
   color: #98999e;
   border-bottom: 1px solid #f5f5f5;
-  float: left;
 }
 
 .xContent .user-info .names, .xContent .user-info .phone {
   float: left;
-  margin-right: 15rpx;
+  margin-left: 40rpx;
 }
 
 .xContent .category {
@@ -362,10 +361,8 @@
 
 .xContent .goBtn {
   width: 100%;
-  height: 50px;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  height: 100rpx;
+  float: left;
 }
 
 .xContent .goBtn button {
