--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -2,9 +2,9 @@
 <form bindsubmit="submitdate">
   <view class='xxInfo'>
     <image src='http://gqftjpg.oss-cn-shenzhen.aliyuncs.com/shouye.jpg' class='logo' />
-    <view class='inpTxt ddm'><view>店代码：</view><input name="userDdm" placeholder="请输入店代码编号"/></view>
-    <view class='inpTxt names'><view>姓名：</view><input name="userNames" placeholder="请输入姓名"/></view>
-    <view class='inpTxt phone'><view>联系电话：</view><input name="userPhone" placeholder="请输入联系电话" type='number' pattern="[0-11]*" maxlenght="11"/></view>
+    <view class='inpTxt ddm'><view>店代码：</view><input name="storeId" placeholder="请输入店代码编号"/></view>
+    <view class='inpTxt names'><view>姓名：</view><input name="name" placeholder="请输入姓名"/></view>
+    <view class='inpTxt phone'><view>联系电话：</view><input name="phone" placeholder="请输入联系电话" type='number' pattern="[0-11]*" maxlenght="11"/></view>
     <button class='goBtn' form-type="submit">确定</button>
   </view>
 </form> 
